--- a/sq.html
+++ b/sq.html
@@ -2,19 +2,19 @@
 <html>	
 	<head>
 		<link rel="stylesheet" href="sq.css" /> 
-		<title>My Todo List </title>
+		<title>Visualization of Linear Data Structures </title>
 	</head>
 	<body>
 		<h2>I want to visualize a ....</h2>
 		<div id="stackButton" class="button"> stack </div>
-		<div id="queueButton" class="button"> queue </div>
-		<!-- <div id="userEntryBox"> 
-			<h4>  </h4><form> <input type='text' maxLength="35" id='userEntry'></form> 		
-				<div id="addButton" class= "button"> Add this to my list! </div>
-				<div id='error'></div>
-		</div>
-		<table class="tableOfTodos"> </table> -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<div id="queueButton" class="button"> queue </div><br><hr>
+		<div id="selection"> </div>
+		<div id="dataEntry"> Enter your data: <textarea id="textBox"></textarea></div>
+		<div id="dataStructure">
+			<ul>
+			</ul> 
+		<script src="/Users/lindamummy/practiceJS/exploration/jquery/src/jquery.js"></script>
+		 <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
 		<script src="sq.js" type="text/javascript"> </script>
 	<body>
 </html>
