--- a/sq.html
+++ b/sq.html
@@ -6,18 +6,26 @@
 	</head>
 	<body>
 		<h2 id="title">I want to visualize a </h2>
-		<div id="stackButton" class="button"> stack </div>
-		<div id="queueButton" class="button"> queue </div>
-		<span id="dataEntry"> 
-				Enter a piece of data <br>(6 character maximum) <br><form> <input type='text' maxLength='6' id="textBox"></form>
-			<div id="selection"> </div>
-			<div id="error"></div>
-		</span>
-		<span id="dataStructure">
+		<div id="stackButton" class="button"> 
+			stack 
+		</div>
+		<div id="queueButton" class="button"> 
+			queue 
+		</div>
+		<div id="dataEntry"> 
+				Enter a piece of data <br>(6 character maximum) <br>
+				<form> 
+					<input type='text' maxLength='6' id="textBox">
+				</form>
+			<div id="selection"> 
+			</div>
+			<div id="error">
+			</div>
+		</div>
+		<div id="dataStructure">
 			<ul id="list">
 			</ul> 
-		</span>
-	</span>
+		</div>
 		 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
 		<script src="sq.js" type="text/javascript"> </script>
 	<body>
