--- a/sq.html
+++ b/sq.html
@@ -26,7 +26,8 @@
 			<ul id="list">
 			</ul> 
 		</div>
-		 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+		 <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+		 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="sq.js" type="text/javascript"> </script>
 	<body>
 </html>
